[gd_scene load_steps=6 format=2]

[ext_resource path="res://enviroments/fondo_cd_3.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/fontparamapa.tres" type="DynamicFont" id=2]
[ext_resource path="res://Comparar y decidir/recursos/Bd/bd_cyd.tres" type="Resource" id=3]
[ext_resource path="res://Comparar y decidir/scripts/cyd.gd" type="Script" id=4]
[ext_resource path="res://Comparar y decidir/top bar cyd/top_bar_minigames.tscn" type="PackedScene" id=5]

[node name="level_comparar_y_decidir" type="Control"]
margin_top = 1.0
margin_right = 446.0
margin_bottom = 705.0
script = ExtResource( 4 )
bd_cyd = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -3.0
margin_top = -1.0
margin_right = 445.0
margin_bottom = 703.0
texture = ExtResource( 1 )

[node name="question_info" type="VBoxContainer" parent="."]
margin_left = 75.0
margin_top = 145.0
margin_right = 367.0
margin_bottom = 214.0

[node name="txt_question" type="Label" parent="question_info"]
margin_right = 292.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.0705882, 0.054902, 0.054902, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Selecciona la imagen que esta 
       visualmente correcta"

[node name="question_holder" type="VBoxContainer" parent="."]
margin_left = 69.0
margin_top = 239.0
margin_right = 369.0
margin_bottom = 679.0
rect_min_size = Vector2( 300, 250 )
size_flags_vertical = 3
custom_constants/separation = 20

[node name="boton_opc_1" type="TextureButton" parent="question_holder"]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )

[node name="boton_opc_2" type="TextureButton" parent="question_holder"]
margin_top = 220.0
margin_right = 300.0
margin_bottom = 420.0
rect_min_size = Vector2( 300, 200 )

[node name="top_bar_minigames" parent="." instance=ExtResource( 5 )]
